# Blink

./: .gitignore  CMakeLists.txt  README.md  build.sh  wallpaper.ini
Source/: Blink.cpp  Blink.hpp
